# personal_soc

./: .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/desktop-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-ui/src/: App.tsx
apps/desktop-ui/src/components/: Layout.tsx
apps/desktop-ui/src/lib/: invoke.ts
apps/desktop-ui/src/pages/: AlertsPage.tsx  AssistantPage.tsx  DashboardPage.tsx  EventsPage.tsx  MaliciousLinkDetectorPage.tsx  PasswordManagerPage.tsx  PhishingDetectorPage.tsx  ProcessDetailPage.tsx  ProcessesPage.tsx  SettingsPage.tsx  StartupPage.tsx
apps/desktop-ui/src/store/: index.ts
apps/desktop-ui/src/styles/: globals.css
apps/desktop-ui/src/types/: index.ts
apps/tauri-shell/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
apps/tauri-shell/src-tauri/capabilities/: default.json
apps/tauri-shell/src-tauri/src/: commands.rs  http_backend.rs  lib.rs  main.rs  state.rs  tray.rs
crates/ai-explainer/: Cargo.toml
crates/ai-explainer/src/: client.rs  context_builder.rs  lib.rs  prompts.rs
crates/monitor-core/: Cargo.toml
crates/monitor-core/src/: error.rs  lib.rs
crates/monitor-core/src/collectors/: metrics_collector.rs  mod.rs  process_collector.rs  startup_collector.rs
crates/monitor-core/src/persistence/: database.rs  migrations.rs  mod.rs
crates/monitor-core/src/rules/: catalog.rs  engine.rs  mod.rs
crates/monitor-core/src/scoring/: mod.rs
crates/monitor-core/src/services/: mod.rs  monitor_service.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: events.rs  lib.rs  models.rs  rules.rs
database/migrations/: 001_initial.sql  002_password_manager.sql
scripts/: dev-runner.js  generate-icons.js
