[workspace]
members = [
    "apps/tauri-shell/src-tauri",
    "crates/monitor-core",
    "crates/ai-explainer",
    "crates/shared-types",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.30"
