[package]
name = "ai-explainer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
