[package]
name = "monitor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
] }
